--- a/responsive.css
+++ b/responsive.css
@@ -9,7 +9,7 @@
     }
 
     .align{
-/*         max-width: 300px; */
+        max-width: 300px;
         margin: auto;
         padding: 0.5rem;
     }
